--- a/main.html
+++ b/main.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-	<div style="
-  width: 300px;
-  background-color: lightblue;
-  border: 15px solid blue;
-  padding: 50px;
-  margin: 20px;
-">
-  This is a demo of box model try to replicate this box model 
-  in Html and Css and try to pass all the test cases.
-</div>
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      /* Your CSS Code here. */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      .box {
+        width: 300px; /* FIX: Changed width to 300px */
+        background-color: lightblue;
+        border: 15px solid blue;
+        padding: 50px;
+        margin: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="box">
+      This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
